--- a/project.config.json
+++ b/project.config.json
@@ -1,13 +1,18 @@
 {
-  "description": "A WePY project",
-  "setting": {
-    "urlCheck": true,
-    "es6": false,
-    "postcss": false,
-    "minified": false
-  },
-  "compileType": "miniprogram",
-  "appid": "wx46cf1f82f22ec635",
-  "projectname": "little-class",
-  "miniprogramRoot": "./dist"
+	"description": "A WePY project",
+	"setting": {
+		"urlCheck": false,
+		"es6": false,
+		"postcss": false,
+		"minified": false,
+		"newFeature": true,
+		"autoAudits": false,
+		"uglifyFileName": true,
+		"nodeModules": true
+	},
+	"compileType": "miniprogram",
+	"appid": "wx46cf1f82f22ec635",
+	"projectname": "little-class",
+	"miniprogramRoot": "dist/",
+	"condition": {}
 }
