--- a/project.config.json
+++ b/project.config.json
@@ -32,7 +32,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 2,
 			"list": [
 				{
 					"id": -1,
@@ -45,6 +45,11 @@
 					"name": "createUser",
 					"pathName": "pages/editUserInfo",
 					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "createGroup",
+					"pathName": "pages/createGroup"
 				}
 			]
 		}
