--- a/project.config.json
+++ b/project.config.json
@@ -32,7 +32,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 3,
+			"current": 5,
 			"list": [
 				{
 					"id": -1,
@@ -63,6 +63,12 @@
 					"name": "createCheck",
 					"pathName": "pages/createCheck",
 					"query": "_id=XAnvA5T75u22WmuJ"
+				},
+				{
+					"id": 5,
+					"name": "editGroupInfo",
+					"pathName": "pages/editGroupInfo",
+					"query": "_id=XBHRscDR1TiNz9uE"
 				}
 			]
 		}
