--- a/project.config.json
+++ b/project.config.json
@@ -32,7 +32,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 5,
+			"current": 6,
 			"list": [
 				{
 					"id": -1,
@@ -69,6 +69,12 @@
 					"name": "editGroupInfo",
 					"pathName": "pages/editGroupInfo",
 					"query": "_id=XBHRscDR1TiNz9uE"
+				},
+				{
+					"id": -1,
+					"name": "about",
+					"pathName": "pages/about",
+					"query": ""
 				}
 			]
 		}
