--- a/project.config.json
+++ b/project.config.json
@@ -32,7 +32,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 6,
+			"current": 5,
 			"list": [
 				{
 					"id": -1,
@@ -68,7 +68,7 @@
 					"id": 5,
 					"name": "editGroupInfo",
 					"pathName": "pages/editGroupInfo",
-					"query": "_id=XBHRscDR1TiNz9uE"
+					"query": "_id=XBiLfsDR1TiN7N_-"
 				},
 				{
 					"id": -1,
