--- a/project.config.json
+++ b/project.config.json
@@ -35,7 +35,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 12,
+			"current": 14,
 			"list": [
 				{
 					"id": -1,
@@ -118,6 +118,20 @@
 					"name": "groupUsers",
 					"pathName": "pages/groupUsers",
 					"query": "group_id=5cbe7044a9f2060c837f0756",
+					"scene": null
+				},
+				{
+					"id": 13,
+					"name": "groupCheckForms",
+					"pathName": "pages/groupCheckForms",
+					"query": "group_id=5cbc2e8799d12004df09cc3c",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "checkFormInfo",
+					"pathName": "pages/checkFormInfo",
+					"query": "group_id=5cbc2e8799d12004df09cc3c&checkForm_id=5cc3b47eabd84227c77aacbd",
 					"scene": null
 				}
 			]
