--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "freetes'Mac <freetes@foxmail.com>",
   "license": "MIT",
   "dependencies": {
+    "moment": "^2.24.0",
     "wepy": "^1.6.0",
     "wepy-async-function": "^1.4.4",
     "wepy-com-toast": "^1.0.2",
