--- a/project.config.json
+++ b/project.config.json
@@ -35,7 +35,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 15,
+			"current": 16,
 			"list": [
 				{
 					"id": -1,
@@ -139,6 +139,12 @@
 					"name": "groupnotices",
 					"pathName": "pages/groupNotices",
 					"query": "group_id=5ccad900d2d29738dfc0b28e"
+				},
+				{
+					"id": 16,
+					"name": "groupAllChecks",
+					"pathName": "pages/groupAllChecks",
+					"query": "group_id=5cc7b9f3b91a4c36dca4ca55"
 				}
 			]
 		}
